--- a/package.json
+++ b/package.json
@@ -4,15 +4,39 @@
   "description": "test web",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start: dev": "webpack serve --config webpack.config.js",
+    "prod": "cross-env NODE_ENV=production webpack",
+    "dev": "cross-env NODE_ENV=development webpack",
+    "prepare": "husky install",
+    "lint": "eslint --debug src/"
   },
   "author": "IgorTtto",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "custom-env": "^2.0.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "eslint-loader": "^4.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js, json, css, html}": [
+      "npm run lint:write",
+      "git add"
+    ]
   }
 }
